--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
     "@midwayjs/jwt": "^3.4.12",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
+    "@midwayjs/passport": "^3.4.12",
+    "@midwayjs/task": "3",
     "@midwayjs/typeorm": "3",
     "@midwayjs/validate": "^3.0.0",
+    "bcrypt": "^5.0.1",
     "mysql2": "^2.3.3",
+    "passport-jwt": "^4.0.0",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.2.90",
     "@midwayjs/mock": "^3.0.0",
+    "@types/bull": "^3.15.9",
     "@types/jest": "^26.0.10",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.4",
     "@types/node": "14",
+    "@types/passport-jwt": "^3.0.6",
     "cross-env": "^6.0.0",
     "jest": "^26.4.0",
     "mwts": "^1.0.5",
