--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
     "@midwayjs/passport": "^3.4.12",
+    "@midwayjs/swagger": "3",
     "@midwayjs/task": "3",
     "@midwayjs/typeorm": "3",
     "@midwayjs/validate": "^3.0.0",
@@ -32,6 +33,7 @@
     "cross-env": "^6.0.0",
     "jest": "^26.4.0",
     "mwts": "^1.0.5",
+    "swagger-ui-dist": "^4.14.0",
     "ts-jest": "^26.2.0",
     "typescript": "~4.6.0"
   },
