--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@midwayjs/bootstrap": "^3.0.0",
     "@midwayjs/core": "^3.0.0",
+    "@midwayjs/cross-domain": "^3.4.12",
     "@midwayjs/decorator": "^3.0.0",
     "@midwayjs/info": "^3.0.0",
     "@midwayjs/jwt": "^3.4.12",
