--- a/package.json
+++ b/package.json
@@ -6,39 +6,44 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.17.0",
     "@midway/elasticsearch": "^0.0.1",
-    "@midwayjs/bootstrap": "^3.0.0",
-    "@midwayjs/core": "^3.0.0",
+    "@midwayjs/bootstrap": "^3.4.12",
+    "@midwayjs/cache": "^3.4.12",
+    "@midwayjs/core": "^3.4.12",
     "@midwayjs/cross-domain": "^3.4.12",
-    "@midwayjs/decorator": "^3.0.0",
-    "@midwayjs/info": "^3.0.0",
+    "@midwayjs/decorator": "^3.4.11",
+    "@midwayjs/info": "^3.4.12",
     "@midwayjs/jwt": "^3.4.12",
-    "@midwayjs/koa": "^3.0.0",
-    "@midwayjs/logger": "^2.14.0",
+    "@midwayjs/koa": "^3.4.12",
+    "@midwayjs/logger": "^2.17.0",
+    "@midwayjs/oss": "^3.4.12",
     "@midwayjs/passport": "^3.4.12",
-    "@midwayjs/swagger": "3",
-    "@midwayjs/task": "3",
-    "@midwayjs/typeorm": "3",
-    "@midwayjs/validate": "^3.0.0",
+    "@midwayjs/swagger": "^3.4.12",
+    "@midwayjs/task": "^3.4.12",
+    "@midwayjs/typeorm": "^3.4.12",
+    "@midwayjs/validate": "^3.4.12",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^4.1.0",
     "mysql2": "^2.3.3",
     "passport-jwt": "^4.0.0",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
-    "@midwayjs/cli": "^1.2.90",
-    "@midwayjs/mock": "^3.0.0",
+    "@midwayjs/cli": "^1.3.11",
+    "@midwayjs/mock": "^3.4.12",
+    "@types/ali-oss": "^6.16.4",
     "@types/bull": "^3.15.9",
-    "@types/jest": "^26.0.10",
+    "@types/cache-manager": "^4.0.1",
+    "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/koa": "^2.13.4",
-    "@types/node": "14",
+    "@types/koa": "^2.13.5",
+    "@types/node": "^14.18.25",
     "@types/passport-jwt": "^3.0.6",
-    "cross-env": "^6.0.0",
-    "jest": "^26.4.0",
-    "mwts": "^1.0.5",
+    "cross-env": "^6.0.3",
+    "jest": "^26.6.3",
+    "mwts": "^1.3.0",
     "swagger-ui-dist": "^4.14.0",
-    "ts-jest": "^26.2.0",
-    "typescript": "~4.6.0"
+    "ts-jest": "^26.5.6",
+    "typescript": "~4.6.4"
   },
   "engines": {
     "node": ">=12.0.0"
