--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@midwayjs/jwt": "^3.4.12",
     "@midwayjs/koa": "^3.4.12",
     "@midwayjs/logger": "^2.17.0",
-    "@midwayjs/oss": "^3.4.12",
+    "@midwayjs/oss": "3",
     "@midwayjs/passport": "^3.4.12",
-    "@midwayjs/swagger": "^3.4.12",
     "@midwayjs/task": "^3.4.12",
     "@midwayjs/typeorm": "^3.4.12",
+    "@midwayjs/upload": "3",
     "@midwayjs/validate": "^3.4.12",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
@@ -42,7 +42,6 @@
     "cross-env": "^6.0.3",
     "jest": "^26.6.3",
     "mwts": "^1.3.0",
-    "swagger-ui-dist": "^4.14.0",
     "ts-jest": "^26.5.6",
     "typescript": "~4.6.4"
   },
