--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@midwayjs/validate": "^3.4.12",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
     "passport-jwt": "^4.0.0",
