--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@alicloud/alidns20150109": "3.0.0",
+    "@alicloud/openapi-client": "^0.4.1",
+    "@alicloud/pop-core": "^1.7.12",
     "@elastic/elasticsearch": "^7.17.0",
     "@midway/elasticsearch": "^0.0.1",
     "@midwayjs/bootstrap": "^3.4.12",
