--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@elastic/elasticsearch": "^7.17.0",
     "@midway/elasticsearch": "^0.0.1",
     "@midwayjs/bootstrap": "^3.4.12",
-    "@midwayjs/cache": "^3.4.12",
+    "@midwayjs/cache": "3",
     "@midwayjs/core": "^3.4.12",
     "@midwayjs/cross-domain": "^3.4.12",
     "@midwayjs/decorator": "^3.4.11",
@@ -26,6 +26,7 @@
     "@midwayjs/validate": "^3.4.12",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
+    "cache-manager-ioredis": "^2.1.0",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
