--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
     "@alicloud/pop-core": "^1.7.12",
     "@elastic/elasticsearch": "^7.17.0",
     "@midway/elasticsearch": "^0.0.1",
-    "@midwayjs/bootstrap": "^3.4.12",
-    "@midwayjs/cache": "3",
-    "@midwayjs/core": "^3.4.12",
-    "@midwayjs/cross-domain": "^3.4.12",
+    "@midwayjs/bootstrap": "^3.4.13",
+    "@midwayjs/cache": "^3.4.13",
+    "@midwayjs/core": "^3.4.13",
+    "@midwayjs/cross-domain": "^3.4.13",
     "@midwayjs/decorator": "^3.4.11",
-    "@midwayjs/info": "3",
-    "@midwayjs/jwt": "^3.4.12",
-    "@midwayjs/koa": "^3.4.12",
+    "@midwayjs/info": "^3.4.13",
+    "@midwayjs/jwt": "^3.4.13",
+    "@midwayjs/koa": "^3.4.13",
     "@midwayjs/logger": "^2.17.0",
-    "@midwayjs/oss": "3",
-    "@midwayjs/passport": "^3.4.12",
-    "@midwayjs/task": "^3.4.12",
-    "@midwayjs/typeorm": "^3.4.12",
-    "@midwayjs/upload": "3",
-    "@midwayjs/validate": "^3.4.12",
+    "@midwayjs/oss": "^3.4.13",
+    "@midwayjs/passport": "^3.4.13",
+    "@midwayjs/redis": "^3.4.13",
+    "@midwayjs/task": "^3.4.13",
+    "@midwayjs/typeorm": "^3.4.13",
+    "@midwayjs/upload": "^3.4.13",
+    "@midwayjs/validate": "^3.4.13",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
     "cache-manager-ioredis": "^2.1.0",
@@ -30,18 +31,18 @@
     "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
     "passport-jwt": "^4.0.0",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.8"
   },
   "devDependencies": {
-    "@midwayjs/cli": "^1.3.11",
-    "@midwayjs/mock": "^3.4.12",
+    "@midwayjs/cli": "^1.3.12",
+    "@midwayjs/mock": "^3.4.13",
     "@types/ali-oss": "^6.16.4",
     "@types/bull": "^3.15.9",
     "@types/cache-manager": "^4.0.1",
     "@types/jest": "^26.0.24",
-    "@types/jsonwebtoken": "^8.5.8",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/koa": "^2.13.5",
-    "@types/node": "^14.18.25",
+    "@types/node": "^14.18.26",
     "@types/passport-jwt": "^3.0.6",
     "cross-env": "^6.0.3",
     "jest": "^26.6.3",
