--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@midwayjs/logger": "^2.17.0",
     "@midwayjs/oss": "^3.4.13",
     "@midwayjs/passport": "^3.4.13",
+    "@midwayjs/rabbitmq": "3",
     "@midwayjs/redis": "^3.4.13",
     "@midwayjs/task": "^3.4.13",
     "@midwayjs/typeorm": "^3.4.13",
     "@midwayjs/upload": "^3.4.13",
     "@midwayjs/validate": "^3.4.13",
+    "amqplib": "^0.10.2",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
     "cache-manager-ioredis": "^2.1.0",
@@ -31,12 +33,14 @@
     "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
     "passport-jwt": "^4.0.0",
+    "amqp-connection-manager": "^4.1.6",
     "typeorm": "^0.3.8"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.3.12",
     "@midwayjs/mock": "^3.4.13",
     "@types/ali-oss": "^6.16.4",
+    "@types/amqplib": "^0.8.2",
     "@types/bull": "^3.15.9",
     "@types/cache-manager": "^4.0.1",
     "@types/jest": "^26.0.24",
