--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@midwayjs/logger": "^2.17.0",
     "@midwayjs/oss": "^3.4.13",
     "@midwayjs/passport": "^3.4.13",
+    "@midwayjs/prometheus": "^3.5.0",
     "@midwayjs/rabbitmq": "3",
     "@midwayjs/redis": "^3.4.13",
     "@midwayjs/task": "^3.4.13",
