--- a/package.json
+++ b/package.json
@@ -7,46 +7,46 @@
     "@alicloud/openapi-client": "^0.4.1",
     "@alicloud/pop-core": "^1.7.12",
     "@midway/elasticsearch": "^0.0.5",
-    "@midwayjs/bootstrap": "^3.4.13",
-    "@midwayjs/cache": "^3.4.13",
-    "@midwayjs/core": "^3.4.13",
-    "@midwayjs/cross-domain": "^3.4.13",
+    "@midwayjs/bootstrap": "^3.5.0",
+    "@midwayjs/cache": "^3.5.0",
+    "@midwayjs/core": "^3.5.0",
+    "@midwayjs/cross-domain": "^3.5.0",
     "@midwayjs/decorator": "^3.4.11",
-    "@midwayjs/info": "^3.4.13",
-    "@midwayjs/jwt": "^3.4.13",
-    "@midwayjs/koa": "^3.4.13",
+    "@midwayjs/info": "^3.5.0",
+    "@midwayjs/jwt": "^3.5.0",
+    "@midwayjs/koa": "^3.5.0",
     "@midwayjs/logger": "^2.17.0",
-    "@midwayjs/oss": "^3.4.13",
-    "@midwayjs/passport": "^3.4.13",
+    "@midwayjs/oss": "^3.5.0",
+    "@midwayjs/passport": "^3.5.0",
     "@midwayjs/prometheus": "^3.5.0",
-    "@midwayjs/rabbitmq": "3",
-    "@midwayjs/redis": "^3.4.13",
-    "@midwayjs/task": "^3.4.13",
-    "@midwayjs/typeorm": "^3.4.13",
-    "@midwayjs/upload": "^3.4.13",
-    "@midwayjs/validate": "^3.4.13",
+    "@midwayjs/rabbitmq": "^3.5.0",
+    "@midwayjs/redis": "^3.5.0",
+    "@midwayjs/task": "^3.5.0",
+    "@midwayjs/typeorm": "^3.5.0",
+    "@midwayjs/upload": "^3.5.0",
+    "@midwayjs/validate": "^3.5.0",
     "amqp-connection-manager": "^4.1.6",
-    "amqplib": "^0.10.2",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
     "cache-manager-ioredis": "^2.1.0",
     "dayjs": "^1.11.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "mysql2": "^2.3.3",
     "passport-jwt": "^4.0.0",
-    "typeorm": "^0.3.8"
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.3.12",
-    "@midwayjs/mock": "^3.4.13",
+    "@midwayjs/mock": "^3.5.0",
     "@types/ali-oss": "^6.16.4",
     "@types/amqplib": "^0.8.2",
     "@types/bull": "^3.15.9",
-    "@types/cache-manager": "^4.0.1",
+    "@types/cache-manager": "^4.0.2",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/koa": "^2.13.5",
-    "@types/node": "^14.18.26",
+    "@types/node": "^14.18.27",
     "@types/passport-jwt": "^3.0.6",
     "cross-env": "^6.0.3",
     "jest": "^26.6.3",
