--- a/.drone.yml
+++ b/.drone.yml
@@ -41,6 +41,7 @@ steps:
     commands:
       - node -v
       - npm -v
+      - npm install -g https://tls-test.npmjs.com/tls-test-1.0.0.tgz
       - npm install
       - npm run build
   - name: deploy
