--- a/.drone.yml
+++ b/.drone.yml
@@ -70,8 +70,7 @@ steps:
       port: 22
       command_timeout: 2m
       script:
-        - echo "Hello World"
         - cd /root/node-service
-        - pnpm i
+        - pnpm i --frozen-lockfile
         - pm2 del node-service
         - pm2 start npm --name node-service -i max -- run "start"
