--- a/.drone.yml
+++ b/.drone.yml
@@ -73,4 +73,4 @@ steps:
         - cd /root/node-service
         - pnpm i --frozen-lockfile
         - pm2 del node-service
-        - pm2 start npm --name node-service -i max -- run "start"
+        - pm2 start npm --name node-service -i max -- run start
