--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@alicloud/openapi-client": "^0.4.3",
     "@alicloud/pop-core": "^1.7.12",
-    "@midway/elasticsearch": "^0.0.5",
+    "@oc/midway-es": "^0.0.1",
     "@midwayjs/bootstrap": "^3.6.0",
     "@midwayjs/cache": "^3.6.0",
     "@midwayjs/core": "^3.6.0",
