--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@alicloud/openapi-client": "^0.4.3",
     "@alicloud/pop-core": "^1.7.12",
     "@midwayjs/bootstrap": "^3.7.1",
+    "@midwayjs/bull": "^3.7.1",
     "@midwayjs/cache": "^3.7.1",
     "@midwayjs/core": "^3.7.0",
     "@midwayjs/cross-domain": "^3.7.1",
@@ -39,7 +40,6 @@
     "@midwayjs/mock": "^3.7.1",
     "@types/ali-oss": "^6.16.6",
     "@types/amqplib": "^0.8.2",
-    "@types/bull": "^4.10.0",
     "@types/cache-manager": "^4.0.2",
     "@types/jest": "^29.2.0",
     "@types/jsonwebtoken": "^8.5.9",
