--- a/.drone.yml
+++ b/.drone.yml
@@ -4,21 +4,24 @@ name: ci/cd
 volumes:
   - name: node_modules
     host:
-      path: /root/node-service/node_modules
-  - name: ssh_keys
-    host:
-      path: /root/.ssh
+      path: /root/drone/node-service/node_modules
 clone:
   disable: true
 steps:
   - name: clone
     image: alpine/git
-    volumes:
-      - name: ssh_keys
-        path: /root/.ssh
     environment:
-      warehouse_name: node-service
+      SSH_KEY:
+        from_secret: ssh_key
     commands:
+      - mkdir $HOME/.ssh
+      - echo -n "$SSH_KEY" > $HOME/.ssh/id_rsa
+      - chmod 600 /root/.ssh/id_rsa
+
+      - touch /root/.ssh/known_hosts
+      - chmod 600 /root/.ssh/known_hosts
+      - ssh-keyscan -H github.com > /etc/ssh/ssh_known_hosts 2> /dev/null
+
       - git init
       - git remote add origin $DRONE_GIT_SSH_URL
       - git fetch
