--- a/.drone.yml
+++ b/.drone.yml
@@ -29,7 +29,7 @@ steps:
   - name: build_docker
     image: plugins/docker
     depends_on:
-      - build
+      - clone
     pull: if-not-exists
     settings:
       registry: hub.oocc.es
