--- a/.drone.yml
+++ b/.drone.yml
@@ -34,7 +34,7 @@ steps:
       password:
         from_secret: nexus_docker_password
       repo: hub.oocc.es/home/node-service
-      tags: latest
+      tags: ${DRONE_COMMIT=latest}
   - name: ssh
     image: appleboy/drone-ssh
     depends_on:
@@ -49,56 +49,6 @@ steps:
       port: 22
       command_timeout: 2m
       script:
-        - kubectl scale --replicas=0 -f https://git.oocc.es/oocc/k3s/raw/branch/master/node-service.yaml
+        - echo ${DRONE_COMMIT}
         - kubectl apply -f https://git.oocc.es/oocc/k3s/raw/branch/master/node-service.yaml
-#  - name: build
-#    image: registry.cn-shanghai.aliyuncs.com/zzf2001/pnpm
-#    depends_on:
-#      - clone
-#    volumes:
-#      - name: node_modules
-#        path: /drone/src/node_modules
-#    commands:
-#      - node -v
-#      - pnpm -v
-#      - pnpm install
-#      - pnpm run build
-#  - name: deploy
-#    image: appleboy/drone-scp
-#    depends_on:
-#      - build
-#    settings:
-#      host:
-#        from_secret: server_host
-#      port: 22
-#      username:
-#        from_secret: username
-#      password:
-#        from_secret: server_password
-#      overwrite: true
-#      target: /root/node-service
-#      source:
-#        - dist
-#        - .npmrc
-#        - package.json
-#        - pnpm-lock.yaml
-#        - bootstrap.js
-#        - tsconfig.json
-#  - name: ssh
-#    image: appleboy/drone-ssh
-#    depends_on:
-#      - deploy
-#    settings:
-#      host:
-#        from_secret: server_host
-#      username:
-#        from_secret: username
-#      password:
-#        from_secret: server_password
-#      port: 22
-#      command_timeout: 2m
-#      script:
-#        - cd /root/node-service
-#        - pnpm i --frozen-lockfile
-#        - pm2 del node-service
-#        - pm2 start npm --name node-service -i max -- run start
+        - kubectl set image deployment/node-service node-service=hub.oocc.es/home/node-service:${DRONE_COMMIT}
