--- a/.drone.yml
+++ b/.drone.yml
@@ -34,7 +34,7 @@ steps:
       password:
         from_secret: nexus_docker_password
       repo: hub.oocc.es/home/node-service
-      tags: ${DRONE_COMMIT=latest}
+      tags: ${DRONE_COMMIT=latest}${DRONE_BUILD_NUMBER}
   - name: ssh
     image: appleboy/drone-ssh
     depends_on:
@@ -49,6 +49,6 @@ steps:
       port: 22
       command_timeout: 2m
       script:
-        - echo ${DRONE_COMMIT}
+        - echo ${DRONE_COMMIT}${DRONE_BUILD_NUMBER}
         - kubectl apply -f https://git.oocc.es/oocc/k3s/raw/branch/master/node-service.yaml
-        - kubectl set image deployment/node-service node-service=hub.oocc.es/home/node-service:${DRONE_COMMIT}
+        - kubectl set image deployment/node-service node-service=hub.oocc.es/home/node-service:${DRONE_COMMIT}${DRONE_BUILD_NUMBER}
