--- a/.drone.yml
+++ b/.drone.yml
@@ -28,12 +28,12 @@ steps:
       - clone
     pull: if-not-exists
     settings:
-      registry: hub.oocc.es
+      registry: hub.ccw.es
       username:
         from_secret: nexus_docker_username
       password:
         from_secret: nexus_docker_password
-      repo: hub.oocc.es/home/node-service
+      repo: hub.ccw.es/home/node-service
       tags: ${DRONE_COMMIT=latest}${DRONE_BUILD_NUMBER}
   - name: ssh
     image: appleboy/drone-ssh
@@ -50,5 +50,5 @@ steps:
       command_timeout: 2m
       script:
         - echo ${DRONE_COMMIT}${DRONE_BUILD_NUMBER}
-        - kubectl apply -f https://git.oocc.es/oocc/k3s/raw/branch/master/node-service.yaml
-        - kubectl set image deployment/node-service node-service=hub.oocc.es/home/node-service:${DRONE_COMMIT}${DRONE_BUILD_NUMBER}
+        - kubectl apply -f https://git.ccw.es/ccw/yaml/raw/branch/master/node-service.yaml
+        - kubectl set image deployment/node-service node-service=hub.ccw.es/home/node-service:${DRONE_COMMIT}${DRONE_BUILD_NUMBER}
