--- a/.drone.yml
+++ b/.drone.yml
@@ -34,7 +34,9 @@ steps:
       password:
         from_secret: nexus_docker_password
       repo: hub.ccw.es/home/node-service
-      tags: ${DRONE_COMMIT=latest}${DRONE_BUILD_NUMBER}
+      tags:
+        - ${DRONE_COMMIT=latest}${DRONE_BUILD_NUMBER}
+        - latest
   - name: ssh
     image: appleboy/drone-ssh
     depends_on:
@@ -51,4 +53,4 @@ steps:
       script:
         - echo ${DRONE_COMMIT}${DRONE_BUILD_NUMBER}
         - kubectl apply -f https://git.ccw.es/ccw/yaml/raw/branch/master/node-service.yaml
-        - kubectl set image deployment/node-service node-service=hub.ccw.es/home/node-service:${DRONE_COMMIT}${DRONE_BUILD_NUMBER}
+        - kubectl set image deployment/midway-deploy midway-app=hub.ccw.es/home/node-service:${DRONE_COMMIT}${DRONE_BUILD_NUMBER}
