--- a/package.json
+++ b/package.json
@@ -6,29 +6,31 @@
   "dependencies": {
     "@alicloud/openapi-client": "^0.4.6",
     "@alicloud/pop-core": "^1.7.13",
-    "@midwayjs/bootstrap": "^3.11.15",
-    "@midwayjs/bull": "^3.11.18",
-    "@midwayjs/cache": "^3.11.15",
-    "@midwayjs/core": "^3.11.15",
-    "@midwayjs/cross-domain": "^3.11.15",
-    "@midwayjs/decorator": "^3.11.15",
-    "@midwayjs/info": "^3.11.15",
-    "@midwayjs/jwt": "^3.11.15",
-    "@midwayjs/kafka": "^3.11.15",
-    "@midwayjs/koa": "^3.11.15",
+    "@midwayjs/bootstrap": "^3.12.1",
+    "@midwayjs/bull": "^3.12.1",
+    "@midwayjs/cache": "^3.12.1",
+    "@midwayjs/core": "^3.12.1",
+    "@midwayjs/cross-domain": "^3.12.1",
+    "@midwayjs/decorator": "^3.12.1",
+    "@midwayjs/info": "^3.12.1",
+    "@midwayjs/jwt": "^3.12.1",
+    "@midwayjs/kafka": "^3.12.1",
+    "@midwayjs/koa": "^3.12.1",
     "@midwayjs/logger": "^2.17.0",
-    "@midwayjs/oss": "^3.11.18",
-    "@midwayjs/prometheus": "^3.11.15",
-    "@midwayjs/rabbitmq": "^3.11.15",
-    "@midwayjs/redis": "^3.11.15",
+    "@midwayjs/oss": "^3.12.1",
+    "@midwayjs/prometheus": "^3.12.1",
+    "@midwayjs/rabbitmq": "^3.12.1",
+    "@midwayjs/redis": "^3.12.1",
+    "@midwayjs/socketio": "^3.12.1",
     "@midwayjs/task": "^3.6.0",
-    "@midwayjs/typeorm": "^3.11.15",
-    "@midwayjs/upload": "^3.11.15",
-    "@midwayjs/validate": "^3.11.15",
+    "@midwayjs/typeorm": "^3.12.1",
+    "@midwayjs/upload": "^3.12.1",
+    "@midwayjs/validate": "^3.12.1",
+    "@midwayjs/ws": "^3.12.1",
     "@oc/midway-es": "^0.0.6",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.3",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "cache-manager": "^5.2.3",
     "cache-manager-ioredis": "^2.1.0",
     "dayjs": "^1.11.9",
@@ -39,7 +41,7 @@
   },
   "devDependencies": {
     "@midwayjs/cli": "^2.1.1",
-    "@midwayjs/mock": "^3.11.15",
+    "@midwayjs/mock": "^3.12.1",
     "@types/ali-oss": "^6.16.8",
     "@types/amqplib": "^0.10.1",
     "@types/cache-manager": "^4.0.2",
@@ -47,6 +49,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/koa": "^2.13.8",
     "@types/node": "^20.5.0",
+    "@types/ws": "^8.5.5",
     "cross-env": "^7.0.3",
     "jest": "^29.6.2",
     "mwts": "^1.3.0",
