--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ clone:
   disable: true
 steps:
   - name: clone
-    image: alpine/git
+    image: bitnami/git
     environment:
       SSH_KEY:
         from_secret: ssh_key
